# lica

./: README.md  TODO.md  justfile  pyproject.toml
src/lica/: __init__.py  cli.py  csv.py  jinja2.py  misc.py  rawimage.py  sqlite.py  tabulate.py  validators.py
src/lica/asyncio/: cli.py
src/lica/asyncio/photometer/: __init__.py  builder.py
src/lica/asyncio/photometer/protocol/: payload.py  photinfo.py  transport.py
src/lica/lab/: __init__.py  types.py
src/lica/lab/ndfilters/: ND-0.5-Transmission@1nm.ecsv  ND-0.5-Transmittance@1nm.ecsv  __init__.py
src/lica/photodiode/: __init__.py
src/lica/raw/: __init__.py  abstract.py  constants.py  exif.py  factory.py  fits.py  roi.py  simulation.py
src/lica/raw/analyzer/: image.py
src/lica/raw/loader/: __init__.py  abstract.py  constants.py  dng.py  exif.py  factory.py  fits.py  roi.py  simulation.py
src/lica/sqlalchemy/: __init__.py  dbase.py  view.py
src/lica/sqlalchemy/asyncio/: dbase.py
src/lica/textual/: argparse.py  logging.py
src/lica/textual/widgets/: about.py  label.py
