[project]
name = "lica"
version = "1.0.0"
description = "Assorte collection of utilities (functions, classes, etc.) used in other projects at LICA, UCM"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Rafael González", email = "rafael08@ucm.es"},
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
    'Topic :: Scientific/Engineering :: Atmospheric Science',
]

# Since this is a collection of source code:
# 1) nWe do not need a build system
# 2) We do not need dependencies
# 
dependencies = []


[project.urls]
Homepage = "https://github.com/guaix-ucm/lica"
Repository = "https://github.com/guaix-ucm/lica.git"
